--- a/keycloak-saml/src/main/resources/static/admin/index.html
+++ b/keycloak-saml/src/main/resources/static/admin/index.html
@@ -3,8 +3,115 @@
 <head>
     <meta charset="UTF-8">
     <title>展示板管理后台</title>
+    <script src="/jquery.js"></script>
 </head>
 <body>
-<h3>欢迎进入管理板后台管理</h3>
+<h3>欢迎<span id='name'></span>进入管理板后台管理</h3>
+<div>
+    <div>
+        age:<span id='age'></span>
+    </div>
+    <ul id='roles'>
+
+    </ul>
+</div>
+<hr>
+<div style="background-color: antiquewhite;" id="current"></div>
+<div>
+    <style>
+        .menu-container {
+            background-color: #eeeeee;
+            border: 1px solid white;
+            padding: 10px;
+            border-radius: 5px;
+        }
+
+        .nav-item {
+            background-color: #00aa5b;
+            margin-top: 5px;
+            padding: 5px;
+            border-radius: 5px;
+            color: white;
+            letter-spacing: 1.2px;
+            padding: 0px 5px;
+        }
+
+        .nav-item a {
+            text-decoration: none;
+            color: inherit;
+            display: block;
+            width: 100%;
+            height: 100%;
+            font-weight: bold;
+        }
+
+        .nav-item a:hover {
+            border-radius: 4px;
+            background-color: #e2f1f6;
+            box-shadow: 0 2px 4px 0 #41abc4;
+            color: #2fb5d4;
+        }
+    </style>
+    <div class='menu-container'>
+        <div class='nav-item'>
+            <a href='http://localhost:7000/index.html'>OpenId Connect Tradition Web(Springboot,Security):7000</a>
+        </div>
+        <div class='nav-item'>
+            <a href='http://localhost:7001/index.html'>Public Web(React, js adapter):7001</a>
+        </div>
+        <div class='nav-item'>
+            Public Service(Token):7002
+        </div>
+        <div class='nav-item'>
+            <a href='http://localhost:7003/index.html'>Saml Web(Spring,Filter):7003</a>
+        </div>
+    </div>
+
+    <style>
+        .content {
+            margin-top: 40px;
+            margin-left: 40px;
+            background-color: #eeeee0;
+            border-color: white;
+            padding: 5px;
+        }
+
+        .resource {
+            background-color: #85b880;
+            font-size: 13px;
+            margin-top: 5px;
+            padding: 5px;
+            border-radius: 5px;
+            color: white;
+            letter-spacing: 1px;
+        }
+
+        .logout {
+
+        }
+    </style>
+    <div class="content">
+        <div class='resource'><a href="/admin/index.html">保护资源，需要权限</a></div>
+        <div class='resource'><a href="/admin?GLO=true">log out</a></div>
+        <div class='resource'><a href="/session/main.html">普通资源,不需要权限</a></div>
+    </div>
+</div>
 </body>
+
+<script>
+	function refresh() {
+		$.get("/admin/core", function (res) {
+			$("#name").html(res.name);
+			$("#current").html(JSON.stringify(res));
+			var attributes = res.attributes;
+			$("#age").html(attributes.age);
+			var roles = attributes.Roles;
+			for (var i in roles) {
+				var role = roles[i];
+				$("#roles").append("<li>" + role + "</li>")
+			}
+		});
+	}
+	refresh();
+</script>
 </html>
