--- a/keycloak-saml/src/main/resources/static/session/main.html
+++ b/keycloak-saml/src/main/resources/static/session/main.html
@@ -5,6 +5,79 @@
     <title>session 展示模块</title>
 </head>
 <body>
-<h3>这里session展示模块，不需要登录</h3>
+<h3>这里session展示模块，不需要登录</h3><div>
+    <style>
+        .menu-container {
+            background-color: #eeeeee;
+            border: 1px solid white;
+            padding: 10px;
+            border-radius: 5px;
+        }
+        .nav-item {
+            background-color: #00aa5b;
+            margin-top: 5px;
+            padding: 5px;
+            border-radius: 5px;
+            color: white;
+            letter-spacing: 1.2px;
+            padding: 0px 5px;
+        }
+        .nav-item a {
+            text-decoration: none;
+            color: inherit;
+            display: block;
+            width: 100%;
+            height: 100%;
+            font-weight: bold;
+        }
+        .nav-item a:hover {
+            border-radius: 4px;
+            background-color: #e2f1f6;
+            box-shadow: 0 2px 4px 0 #41abc4;
+            color: #2fb5d4;
+        }
+    </style>
+    <div class='menu-container'>
+        <div class='nav-item'>
+            <a href='http://localhost:7000/index.html'>OpenId Connect Tradition Web(Springboot,Security):7000</a>
+        </div>
+        <div class='nav-item'>
+            <a href='http://localhost:7001/index.html'>Public Web(React, js adapter):7001</a>
+        </div>
+        <div class='nav-item'>
+            Public Service(Token):7002
+        </div>
+        <div class='nav-item'>
+            <a href='http://localhost:7003/index.html'>Saml Web(Spring,Filter):7003</a>
+        </div>
+    </div>
+
+    <style>
+        .content {
+            margin-top: 40px;
+            margin-left: 40px;
+            background-color: #eeeee0;
+            border-color: white;
+            padding: 5px;
+        }
+        .resource {
+            background-color: #85b880;
+            font-size: 13px;
+            margin-top: 5px;
+            padding: 5px;
+            border-radius: 5px;
+            color: white;
+            letter-spacing: 1px;
+        }
+        .logout {
+
+        }
+    </style>
+    <div class="content">
+        <div class='resource'><a href="/admin/index.html">保护资源，需要权限</a></div>
+        <div class='resource'><a href="/admin?GLO=true">log out</a></div>
+        <div class='resource'><a href="/session/main.html">普通资源,不需要权限</a></div>
+    </div>
+</div>
 </body>
 </html>
