change html style

--- a/keycloak-saml/src/main/resources/static/admin/index.html
+++ b/keycloak-saml/src/main/resources/static/admin/index.html
@@ -2,21 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>展示板管理后台</title>
+    <title>keycloak saml 权限受控页面</title>
     <script src="/jquery.js"></script>
 </head>
 <body>
-<h3>欢迎<span id='name'></span>进入管理板后台管理</h3>
-<div>
-    <div>
-        age:<span id='age'></span>
-    </div>
-    <ul id='roles'>
-
-    </ul>
-</div>
-<hr>
-<div style="background-color: antiquewhite;" id="current"></div>
 <div>
     <style>
         .menu-container {
@@ -96,6 +85,18 @@
         <div class='resource'><a href="/session/main.html">普通资源,不需要权限</a></div>
     </div>
 </div>
+
+<h3>欢迎<span id='name'></span>进入管理板后台管理</h3>
+<div>
+    <div>
+        age:<span id='age'></span>
+    </div>
+    <ul id='roles'>
+
+    </ul>
+</div>
+<hr>
+<div style="background-color: antiquewhite;" id="current"></div>
 </body>
 
 <script>
