--- a/keycloak-saml/src/main/resources/static/session/main.html
+++ b/keycloak-saml/src/main/resources/static/session/main.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>session 展示模块</title>
+    <title>keycloak saml 自由页面</title>
 </head>
 <body>
 <h3>这里session展示模块，不需要登录</h3><div>
