--- a/keycloak-saml/src/main/resources/static/index.html
+++ b/keycloak-saml/src/main/resources/static/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>keycloak Saml Web</title>
+    <title>keycloak Saml Web problem</title>
 </head>
 <body>
     <div>
