--- a/keycloak-saml/src/main/resources/static/admin/index.html
+++ b/keycloak-saml/src/main/resources/static/admin/index.html
@@ -40,6 +40,30 @@
             box-shadow: 0 2px 4px 0 #41abc4;
             color: #2fb5d4;
         }
+        .account-manager {
+            margin-top: 20px;
+            margin-left: 20px;
+            letter-spacing: 1px;
+            background-color: rebeccapurple;
+            color: white;
+            display: inline-block;
+            padding: 5px;
+            border-radius: 3px;
+        }
+        .account-manager a {
+            text-decoration: none;
+            color: inherit;
+            display: block;
+            width: 100%;
+            height: 100%;
+            font-weight: bold;
+        }
+        .account-manager a:hover {
+            border-radius: 4px;
+            background-color: #e2f1f6;
+            box-shadow: 0 2px 4px 0 #41abc4;
+            color: #2fb5d4;
+        }
     </style>
     <div class='menu-container'>
         <div class='nav-item'>
@@ -53,6 +77,9 @@
         </div>
         <div class='nav-item'>
             <a href='http://localhost:7003/index.html'>Saml Web(Spring,Filter):7003</a>
+        </div>
+        <div class='account-manager'>
+            <a href='http://localhost:8081/auth/realms/core/account'>Keycloak Account Management</a>
         </div>
     </div>
 
